# nest

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: CORE_TYPES.md  CUDA_BACKEND.md  EULER_SOLVER.md  PERFORMANCE.md  README_DEV.md
examples/: CMakeLists.txt
examples/advect1d/: CMakeLists.txt  advect1d.cpp
examples/benchmark/: CMakeLists.txt  benchmark_euler1d.cpp
examples/sod1d/: CMakeLists.txt  README.md  euler1d.hpp  sod1d.cpp
examples/sod2d/: CMakeLists.txt  README.md  euler2d.hpp  sod2d.cpp
include/nest/: core.hpp  patch.hpp  pipeline.hpp
python/: .gitignore  README.md  __init__.py  __main__.py  demo.sh  plot_sod1d.py  plot_sod2d.py
scripts/: plot_advect1d.py  plot_sod.py
src/backend_cpu/: cpu_exec.cpp
src/backend_cuda/: CMakeLists.txt  euler1d_cuda.cuh  euler1d_solver.cu  euler1d_solver.hpp  euler2d_cuda.cuh
tests/: CMakeLists.txt  test_core.cpp  test_euler.cpp  test_euler_cuda.cpp
tools/: guard_independence.sh
